tests/error/linear_errors/field_copy_nested3.err
Error: Copy violation (at $FILE:23:11)
   | 
21 | def foo(s: MyStruct1 @owned) -> qubit:
22 |     use(s.x)
23 |     return s.x.q
   |            ^^^^^ Field `s.x.q` with non-copyable type `qubit` cannot be
   |                  returned ...

Note:
   | 
21 | def foo(s: MyStruct1 @owned) -> qubit:
22 |     use(s.x)
   |         --- Field `s.x.q` already consumed here

Guppy compilation failed due to 1 previous error
